--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@
     border: 2px solid black;
     width: 86.6vw;
     text-align: center;
-    color: black;
+    color: #f4511e;
    
 }
 .welcome{
